# pyro-engine

./: .buildinfo  .codacy.yaml  .coverage  .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile-cpu  Makefile  README.md  RESIZE_COMPRESSION_REPORT.md  analyze_compression_impact.py  capture.py  changelog.html  check_ncnn_determinism.py  compare_compression_bulk.jsonl  compare_compression_bulk.py  compare_jpeg_at_resolutions.jsonl  compare_jpeg_at_resolutions.py  compare_resize_cv2.jsonl  compare_resize_cv2.py  compute_panorama.ipynb  core.html  coverage.xml  docker-compose.yml  engine.html  genindex.html  get_images_calibration.ipynb  index.html  installation.html  installing.html  main.rpi.requirements.txt  objects.inv  pi_zeros_data.json  py-modindex.html  (+10 more)
.conda/: meta.yaml
.doctrees/: changelog.doctree  core.doctree  engine.doctree  environment.pickle  index.doctree  installation.doctree  installing.doctree  sensors.doctree
.github/: FUNDING.yml  collect_env.py  validate_headers.py
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-push-image.yml  builds.yml  doc-deploy.yml  doc-status.yml  docker.yml  docs.yml  gh-page.yml  main.yml  markdown-links-config.json  markdown-links.yml  pi.yml  publish-docker-image.yml  release.yml  style.yml  tests.yml
_modules/: index.html
_modules/pyroengine/: core.html  engine.html  sensors.html
_sources/: core.rst.txt  index.rst.txt
_static/: documentation_options.js
camera_api/: camera_rtsp.py  main.py
docs/: requirements.txt
docs/source/: changelog.rst  conf.py  core.rst  engine.rst  index.rst  installing.rst  sensors.rst
internal_sys_api/src/: Dockerfile
live_stream_api/: Dockerfile  README.md  app.py  ffmpeg_config.yaml  main.py  reolink.py  requirements.txt  set_cam_encoding.py  stream.sh
pizero/: python.env.dist  runner.py
promtail/: config.yml
pyro-predictor/: pyproject.toml
pyro-predictor/pyro_predictor/: __init__.py  predictor.py  utils.py  vision.py
pyro_camera_api/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
pyro_camera_api/api/: routes_patrol.py
pyro_camera_api/client/: pyproject.toml  setup.py
pyro_camera_api/client/pyro_camera_api_client/: __init__.py  client.py  version.py
pyro_camera_api/pyro_camera_api/: main.py  requirements.txt
pyro_camera_api/pyro_camera_api/api/: deps.py  fov_tables.json  routes_cameras.py  routes_control.py  routes_focus.py  routes_health.py  routes_patrol.py  routes_stream.py
pyro_camera_api/pyro_camera_api/camera/: base.py  patrol.py  registry.py  stuck_detector.py
pyro_camera_api/pyro_camera_api/camera/adapters/: __init__.py  linovision.py  mock.py  reolink.py  rtsp.py  url.py
pyro_camera_api/pyro_camera_api/camera/backends/: __init__.py  fake.py  mock.py  reolink.py  rtsp.py  url.py
pyro_camera_api/pyro_camera_api/core/: __init__.py  config.py  logging.py
pyro_camera_api/pyro_camera_api/services/: anonymization.py  anonymizer.py  anonymizer_rtsp.py  stream.py  utils.py  vision.py
pyro_camera_api/pyro_camera_api/utils/: time_utils.py
pyroengine/: Untitled-1.json  __init__.py  core.py  engine.py  logger_config.py  sensors.py  test_occlusion_bboxes_0.json  utils.py  vision.py
pyroengine/engine/: __init__.py  engine.py  predictor.py  pyronear_engine.py  pyronear_predictor.py
pyroengine/inference/: __init__.py  configManager.py  inference.cfg  pyronearPredict.py
pyroengine/internal_sys_api/: README.md
pyroengine/models/: __init__.py  utils.py  yolov5.py
pyroengine/pc/: pyronearEngine.py
pyroengine/pi_utils/: .env  .env.dist  camera.rpi.requirements.txt  check_internet_connection.sh  ip_hostname_mapping.py  monitor_pi.py  reboot_router.py  requirements.txt  runner.py  update_script.sh  updater.py
pyroengine/raspberryPi/: pyronearEngine.py
pyronearEngine/inference/: __init__.py  pyronearPredict.py
pyronearEngine/raspberryPi/: __init__.py  monitorPi.py  pyronearEngine.py
pyronearEngine/webApp/: Dockerfile
reolink_api/: Dockerfile  client.py  main.py  pyproject.toml  reolink.py  requirements.txt
reolink_api/client/: pyproject.toml  setup.py
reolink_api/client/reolink_api_client/: __init__.py  client.py  version.py
reolink_api/src/: ffmpeg_config.yaml  main.py  relay_min.py  relay_stream.py  relay_sync.py  remote_camera.py  reolink.py  rtsp_anonymize_srt.py  run_stream.py  run_stream2.py  test_reolink.py
reolink_api/src/anonymizer/: anonymize_stream.py  anonymizer.py  anonymizer_loop.py  anonymizer_registry.py  rtsp_anonymize_srt.py  speed_test.py  utils.py  vision.py
reolink_api/src/camera/: camera_rtsp.py  camera_url.py  capture.py  config.py  control.py  focus.py  info.py  patrol.py  registry.py  stream.py  time_utils.py
reolink_api/src/camera_api/: camera_rtsp.py  main.py
runner/: docker-compose.yml
runner/src/: Dockerfile  capture.py  requirements.txt  runner.py
scripts/: check_internet_connection.sh  collect_env.py  debug_script.sh  get_sunset_sunrise.sh  relaunch_docker_daily.sh  setup-docker-compose.sh  setup_patrol_presets.py  update_script.sh  update_script_develop.sh
server/: README.md  docker-compose.yml  ip_hostname_mapping.py
src/: Dockerfile  Makefile  camera_fov.ipynb  capture.py  capture_all_positions.py  capture_and_save.py  control_reolink_cam.py  controller.py  dl_image.py  docker-compose.yml  download_s3.py  focus_finder.py  get_working_cams.py  pyproject.toml  requirements-light.txt  requirements.txt  run.py  set_cam_encoding.py  setup_positions.py  sweep_focus_and_capture.py
test/: .coverage  coverage.xml  fake_gpiozero.py  fake_picamera.py  pi_patch.py  test_engine.py  test_raspberryPi_monitorPi.py  test_runner.py  test_utils.py
tests/: conftest.py  test_core.py  test_engine.py  test_engine_core.py  test_engine_vision.py  test_predictor.py  test_sensors.py  test_vision.py
tools/: README.md  livestream_app.py  ptz_calibration_app.py  ptz_zoom_speed_calibration_report.md  pyproject.toml
watchdog/: requirements.txt
(+45 files in other folders)
