[build-system]
requires = ["setuptools>=67.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyroengine"
dynamic = ["version"]
description = "Wildfire detection on edge devices"
authors = [{ name = "Pyronear", email = "contact@pyronear.org" }]
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["pytorch", "deep learning", "vision", "cnn", "wildfire"]
requires-python = ">=3.11,<4.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests==2.31.0",
    "huggingface_hub==0.23.1",
    "python-dotenv==1.1.0",
    "pyroclient",
    "pyro_camera_api_client",
    "pyro_predictor",
]

[project.urls]
documentation = "https://pyronear.org/pyro-engine"
repository = "https://github.com/pyronear/pyro-engine"
tracker = "https://github.com/pyronear/pyro-engine/issues"

[tool.setuptools.packages.find]
include = ["pyroengine*"]

[tool.uv.sources]
pyroclient = { git = "https://github.com/pyronear/pyro-api.git", branch = "main", subdirectory = "client" }
pyro_camera_api_client = { path = "pyro_camera_api/client", editable = true }
pyro_predictor = { path = "pyro-predictor", editable = true }

[dependency-groups]
quality = [
    "ruff>=0.14.0,<0.15",
    "black>=24.3.0,<25",
    "isort>=5.13.2,<6",
    "mypy>=1.9.0,<2",
    "pydocstyle>=6.3.0,<7",
]
dev = [
    "pytest>=7.0,<8",
    "pytest-asyncio>=0.23.0,<0.24",
    "coverage>=7.4.0,<8",
    "requests>=2.31.0,<3",
    "flake8>=7.0.0,<8",
    "isort>=5.13.2,<6",
    "mypy>=1.9.0,<2",
    "pydocstyle>=6.3.0,<7",
    "black>=24.3.0,<25",
    "onnx>=1.15.0,<2",
]
docs = [
    "sphinx>=7.2.6,<8",
    "furo>=2024.1.29",
    "sphinxemoji>=0.2.0,<0.3",
    "sphinx-copybutton>=0.5.2,<0.6",
    "Jinja2>=3.1.3,<4",
]

[tool.coverage.run]
source = ["pyroengine"]

[tool.mypy]
python_version = "3.11"
files = "pyroengine/,pyro_camera_api/,pyro-predictor/pyro_predictor/"
show_error_codes = true
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
implicit_reexport = false

ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "pyroengine.version"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyroengine.__init__"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "onnxruntime.*",
    "requests.*",
    "PIL.*",
    "pyroclient.*",
    "urllib3.*",
    "setuptools",
    "yaml",
    "ncnn",
]


[tool.ruff]
line-length = 120
target-version = "py311"
preview = true

[tool.ruff.lint]
select = [
    "F", "E", "W", "I", "N",
    "D201", "D202", "D207", "D208", "D214", "D215", "D300", "D301", "D417", "D419",
    "YTT", "ANN", "ASYNC", "S", "BLE", "B", "A", "COM", "CPY", "C4", "T10", "ISC", "ICN", "LOG",
    "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SIM", "ARG", "PTH", "PERF", "NPY", "FURB", "RUF"
]
ignore = [
    "E501", "B008", "B904", "C901", "F403", "E731", "C416",
    "ANN002", "ANN003", "COM812", "ISC001"
]
exclude = [".git", "pyro-predictor/**", "docs/**"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["pyroengine", "pyro_camera_api"]
known-third-party = ["pillow", "tqdm", "onnxruntime", "huggingface_hub"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["I001", "F401", "CPY001"]
"src/**.py" = ["D", "T201", "S101", "ANN", "BLE001", "S106", "S113", "S501"]
".github/**.py" = ["D", "T201", "ANN", "S", "PYI024"]
"tests/**.py" = ["D103", "CPY001", "S101", "T201", "ANN001", "ANN201", "ANN202", "ARG001", "S113"]
"pyro_camera_api/**.py" = ["D", "T201", "S101", "ANN", "BLE001", "S113", "S501", "S404", "S603", "S405", "S314", "E402", "RUF029"]
"pyroengine/core.py" = ["BLE001"]
"pyroengine/sensors.py" = ["S113", "S501", "ANN"]
"watchdog/**.py" = ["CPY001", "S108", "S310", "S404", "S603", "S607", "BLE001", "LOG015"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.isort]
line_length = 120
skip_glob = "**/__init__.py"

[tool.pydocstyle]
select = "D300,D301,D417"
match = ".*\\.py"

[tool.black]
line-length = 120
target-version = ['py311']
