[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyro-engine"
version = "0.2.0.dev0"
description = "Wildfire detection on edge devices"
authors = ["Pyronear <pyronear@contact.org>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
pyroclient = { git = "https://github.com/pyronear/pyro-api.git", rev = "767be30a781b52b29d68579d543e3f45ac8c4713", subdirectory = "client" }
pyroengine = "^0.2.0"
python-dotenv = ">=0.15.0"
onnxruntime = "1.18.1"
ncnn = "1.0.20240410"
