[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyro-engine"
version = "0.2.0.dev0"
description = "Wildfire detection on edge devices"
authors = ["Pyronear <pyronear@contact.org>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
pyroclient = { git = "https://github.com/pyronear/pyro-api.git", rev = "40cda4aa84d801f908d66730a74b379aee57aec1", subdirectory = "client" }
pyroengine = "^0.2.0"
python-dotenv = ">=0.15.0"
onnxruntime = "1.20.1"
ncnn = ">1.0"
