[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyro-engine"
version = "0.2.0.dev0"
description = "Wildfire detection on edge devices"
authors = ["Pyronear <pyronear@contact.org>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
pyroclient = { git = "https://github.com/pyronear/pyro-api.git", branch = "main", subdirectory = "client" }
pyroengine = "^0.2.0"
python-dotenv = ">=0.15.0"
onnxruntime = "1.18.1"
ncnn = "1.0.20240410"
