[project]
name = "pyro_camera_api_client"
version = "0.1.0"
description = "Python client to interact with the Pyro Camera API"
authors = [{ name = "Pyronear", email = "contact@pyronear.org" }]
requires-python = ">=3.9"
dependencies = [
    "requests",
    "pillow",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "ruff", "mypy"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pyro_camera_api_client"]
